# lora-sensor-pico

./: .gitmodules  CMakeLists.txt  README.md  pimoroni_pico_import.cmake
src/: config.h  main.cpp
